--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -11,4 +11,5 @@ plotters = "0.3"
 ndarray = "0.13"
 linfa = {git = "https://github.com/rust-ml/linfa", branch = "master"}
 linfa-clustering = { git = "https://github.com/rust-ml/linfa/", branch = "master"}
-rand = "0.7"
+linfa-nn = { git = "https://github.com/rust-ml/linfa/", branch = "master"}
+rand = "0.8"
